@@ -27,6 +27,9 @@
 
 	* autogen.sh: call gitclean instead of distclean
 
+	* sawfish.ebuild.in: remove audiofile/esound
+	                     missing `fi' added
+
 2010-01-02  Christopher Bratusek <zanghar@freenet.de>
 	* po/Makefile.in: don't remove sawfish.pot upon distclean
 
